bad/var_decl_init_invalid_conversion_int_null.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_int_null.lat:3:8: [1;31merror: [0;1mincompatible types: cannot assign variable of type `int` with an expression of type `null`[m
	int x = null;
	      [1;32m^[m
